--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <label for="floatingInput">Search Word</label>
       <div class="col-12 my-4">
         <button class="btn btn-primary search-btn" type="submit">Search</button>
+        <button class="btn btn-primary loader-btn hidden" type="button" disabled>
+          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Searching...
+        </button>
       </div>
     </div>
 
