changed the meaning list to scrollable

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- meaning -->
     <div class="container">
         <center class="word hidden">Word</center>
-      <ul class="meanings list-group"></ul>
+      <ul class="meanings list-group list-overflow"></ul>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
