--- a/index.html
+++ b/index.html
@@ -4,27 +4,36 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS -->
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <title>Dictionary App</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand title">
-                <img src="book.png" alt="" width="50" height="50" class="d-inline-block align-text-top">
-                Dictionary App
-              </a>
-        </div>
-      </nav>
+      <div class="container-fluid">
+        <a class="navbar-brand title">
+          <img
+            src="book.png"
+            alt=""
+            width="50"
+            height="50"
+            class="d-inline-block align-text-top"
+          />
+          Dictionary App
+        </a>
+      </div>
+    </nav>
     <div class="form-floating mb-3 container my-5">
       <input
         type="text"
@@ -35,17 +44,30 @@
       <label for="floatingInput">Search Word</label>
       <div class="col-12 my-4">
         <button class="btn btn-primary search-btn" type="submit">Search</button>
-        <button class="btn btn-primary loader-btn hidden" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+        <button
+          class="btn btn-primary loader-btn hidden"
+          type="button"
+          disabled
+        >
+          <span
+            class="spinner-border spinner-border-sm"
+            role="status"
+            aria-hidden="true"
+          ></span>
           Searching...
         </button>
       </div>
     </div>
 
+    <!-- Error msg -->
+    <div class="error-msg hidden"></div>
     <!-- meaning -->
     <div class="container">
-        <center class="word hidden">Word</center>
-      <ul class="meanings list-group list-overflow"></ul>
+      <center class="word hidden">Word</center>
+      <div class="meanings"></div>
+      <div class="thesaurus">
+        
+      </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
